@@ -3689,6 +3689,7 @@ STR_6582    :Open keyboard shortcuts window
 
 STR_6583    :{WINDOW_COLOUR_2}Reversed Trains
 STR_6584    :Select to run trains backwards
+STR_6585    :Can’t make changes…
 
 #############
 # Scenarios #
