@@ -3988,6 +3988,7 @@ enum : uint16_t
 
     STR_OPTION_REVERSE_TRAINS = 6583,
     STR_OPTION_REVERSE_TRAINS_TIP = 6584,
+    STR_RIDE_SET_VEHICLE_REVERSED_FAIL = 6585,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
