@@ -6351,7 +6351,7 @@ static uint8_t GetSwingSprite(int16_t swingPosition)
 void Vehicle::UpdateSwingingCar()
 {
     int32_t dword_F64E08 = abs(_vehicleVelocityF64E08);
-    if (HasUpdateFlag(VEHICLE_UPDATE_FLAG_IS_REVERSED))
+    if (HasFlag(VehicleFlags::CarIsReversed))
     {
         dword_F64E08 *= -1;
     }
